--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>DotDraw</title>
     <style>
         body {
@@ -12,33 +12,28 @@
             padding: 20px;
             text-align: center;
         }
-
         header {
             background-color: #222;
             color: white;
             padding: 10px 0;
             margin-bottom: 30px;
         }
-
         input {
             padding: 10px;
             font-size: 16px;
             width: 250px;
             margin-right: 10px;
         }
-
         button {
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
         }
-
         #status {
             margin-top: 20px;
             font-size: 14px;
             color: #444;
         }
-
         #imagePreview img {
             max-width: 90%;
             margin-top: 20px;
