--- a/index.html
+++ b/index.html
@@ -1,55 +1,63 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DotDraw</title>
-  <style>
-    body {
-      font-family: "Helvetica", sans-serif;
-      background-color: #f7f7f7;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-    }
-    header {
-      background-color: #222;
-      color: white;
-      padding: 10px 0;
-      margin-bottom: 30px;
-    }
-    input {
-      padding: 10px;
-      font-size: 16px;
-      width: 250px;
-      margin-right: 10px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    #status {
-      margin-top: 20px;
-      font-size: 14px;
-      color: #444;
-    }
-    #imagePreview img {
-      max-width: 90%;
-      margin-top: 20px;
-      border: 1px solid #ccc;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DotDraw</title>
+    <style>
+        body {
+            font-family: "Helvetica", sans-serif;
+            background-color: #f7f7f7;
+            margin: 0;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header {
+            background-color: #222;
+            color: white;
+            padding: 10px 0;
+            margin-bottom: 30px;
+        }
+
+        input {
+            padding: 10px;
+            font-size: 16px;
+            width: 250px;
+            margin-right: 10px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        #status {
+            margin-top: 20px;
+            font-size: 14px;
+            color: #444;
+        }
+
+        #imagePreview img {
+            max-width: 90%;
+            margin-top: 20px;
+            border: 1px solid #ccc;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>DotDraw</h1>
-    <p>輸入你想像的畫面，我們幫你變成圖片</p>
-  </header>
-  <input type="text" id="promptInput" placeholder="輸入提示詞...">
-  <button onclick="generateImage()">生成圖片</button>
-  <div id="status"></div>
-  <div id="imagePreview"></div>
-  <script src="script.js"></script>
+    <header>
+        <h1>DotDraw</h1>
+        <p>輸入你想像的畫面，我們幫你變成圖片</p>
+    </header>
+
+    <input type="text" id="promptInput" placeholder="輸入提示詞...">
+    <button onclick="generateImage()">生成圖片</button>
+
+    <div id="status"></div>
+    <div id="imagePreview"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
