--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>DotDraw</h1>
         <p>輸入你想像的畫面，我們幫你變成圖片</p>
     </header>
-    <input type="text" id="promptInput" placeholder="紅帽子貓咪">
+    <input type="text" id="promptInput" placeholder="可愛的機器貓">
     <button onclick="generateImage()">生成圖片</button>
     <div id="status"></div>
     <div id="imagePreview"></div>
