--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DotDraw</title>
-    <style>
-        body { font-family: "Helvetica", sans-serif; background-color: #f7f7f7; text-align: center; padding: 20px; }
-        header { background-color: #222; color: white; padding: 10px 0; margin-bottom: 30px; }
-        input, button { padding: 10px; font-size: 16px; margin: 5px; }
-        #status { margin-top: 20px; font-size: 14px; color: #444; }
-        #imagePreview img { max-width: 90%; margin-top: 20px; border: 1px solid #ccc; }
-    </style>
 </head>
 <body>
-    <header>
-        <h1>DotDraw</h1>
-        <p>輸入你想像的畫面，我們幫你變成圖片</p>
-    </header>
-    <input type="text" id="promptInput" placeholder="輸入提示詞...">
+    <h1>DotDraw</h1>
+    <p>輸入你想像的畫面，我們幫你變成圖片</p>
+    <input type="text" id="promptInput" placeholder="貓咪坐在月亮上" />
     <button onclick="generateImage()">生成圖片</button>
-    <button onclick="clearResult()">清除</button>
+    <button onclick="clearImage()">清除</button>
     <button onclick="regenerateImage()">重新產生</button>
     <div id="status"></div>
     <div id="imagePreview"></div>
