--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h1>DotDraw</h1>
   <p>輸入你想像的畫面，我們幫你變成圖片</p>
-  <input type="text" id="promptInput" placeholder="例如：一隻在月亮上睡覺的貓">
+  <input type="text" id="promptInput" placeholder="描述你的畫面">
   <button onclick="generateImage()">生成圖片</button>
-  <button onclick="clearPrompt()">清除</button>
+  <button onclick="clearImage()">清除</button>
   <button onclick="regenerateImage()">重新產生</button>
   <div id="status"></div>
   <div id="imagePreview"></div>
