--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DotDraw</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>DotDraw</title>
 </head>
 <body>
-  <h1>DotDraw</h1>
-  <p>輸入你想像的畫面，我們幫你變成圖片</p>
-  <input type="text" id="promptInput" placeholder="描述你的畫面">
-  <button onclick="generateImage()">生成圖片</button>
-  <button onclick="clearImage()">清除</button>
-  <button onclick="regenerateImage()">重新產生</button>
-  <div id="status"></div>
-  <div id="imagePreview"></div>
-  <script src="script.js"></script>
+    <h1>DotDraw</h1>
+    <p>輸入你想像的畫面，我們幫你變成圖片</p>
+    <input type="text" id="promptInput" placeholder="例如：穿太空衣的柴犬坐在月球上">
+    <button onclick="generateImage()">生成圖片</button>
+    <button onclick="clearImage()">清除</button>
+    <button onclick="regenerateImage()">重新產生</button>
+    <div id="status"></div>
+    <div id="imagePreview"></div>
+    <script src="script.js"></script>
 </body>
 </html>
