--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>DotDraw</title>
 </head>
 <body>
   <h1>DotDraw</h1>
   <p>輸入你想像的畫面，我們幫你變成圖片</p>
-  <input type="text" id="prompt" placeholder="描述畫面 (請用英文)">
-  <button onclick="generateImage()">生成圖片</button>
+  <input type="text" id="prompt" placeholder="貓咪坐在月亮上" />
+  <button onclick="generate()">生成圖片</button>
   <button onclick="clearImage()">清除</button>
-  <button onclick="regenerateImage()">重新產生</button>
+  <button onclick="retry()">重新產生</button>
   <p id="status"></p>
-  <img id="resultImage" src="" alt="生成圖片" style="max-width: 100%;">
+  <img id="result" src="" style="max-width: 400px; display: none;" />
   <script src="script.js"></script>
 </body>
 </html>
