--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <button onclick="clearImage()">清除</button>
   <button onclick="retry()">重新產生</button>
   <p id="status"></p>
-  <img id="result" src="" style="max-width: 400px; display: none;" />
+  <div id="result"></div>
   <script src="script.js"></script>
 </body>
 </html>
