--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-  <meta charset="UTF-8" />
-  <title>DotDraw</title>
-</head>
-<body>
-  <h1>DotDraw</h1>
-  <p>輸入你想像的畫面，我們幫你變成圖片</p>
-  <input type="text" id="prompt" placeholder="貓咪坐在月亮上" />
-  <button onclick="generate()">生成圖片</button>
-  <button onclick="clearImage()">清除</button>
-  <button onclick="retry()">重新產生</button>
-  <p id="status"></p>
-  <div id="result"></div>
-  <script src="script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>DotDraw</title></head><body>Hello DotDraw!</body></html>
