--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button onclick="clearImage()">清除</button>
     <button onclick="generate()">重新產生</button>
     <p id="status"></p>
-    <img id="output" src="" alt="生成圖片" style="max-width: 300px; display:none;" onerror="this.style.display='none'; document.getElementById('status').innerText='圖片載入失敗，請重新試試或檢查網址';"/>
+    <img id="output" src="" alt="生成圖片" style="max-width: 300px; display:none;" />
     <script src="script.js"></script>
 </body>
 </html>
